@@ -82,6 +82,7 @@ Enhancements:
 - #7437 Show message box explaining why settings are read-only
 - #7438 Compare result of `clickedButton` instead of `exec`
 - #7440 Fixed light logo filename on about screen
+- #7441 Share file line logic between logger and message box
 
 # 1.14.6
 
